<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_blue_bright"
            android:gravity="center"
            android:text="@string/restaurant_name"
            android:textColor="@android:color/background_light"
            android:textSize="40sp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="88dp"
            android:background="@android:color/holo_green_light"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="158dp"
                android:layout_height="151dp"
                android:layout_gravity="center_vertical"
                android:scaleType="centerInside"
                android:src="@drawable/main" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:gravity="center_horizontal"
                android:numColumns="auto_fit"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/restaurant_address"
                    android:textColor="@android:color/background_light"
                    android:textSize="17sp" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:text="@string/restaurant_phonenumber"
                        android:textColor="@android:color/holo_red_dark"
                        android:textSize="20sp" />

                    <!--ImageButton 추가-->
                    <ImageButton
                        android:layout_width="47dp"
                        android:layout_height="wrap_content"
                        android:onClick="callnumber"
                        android:src="@drawable/ic_phone_black_24dp" />

                </LinearLayout>


                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/restaurant_operationtime"
                    android:textColor="@android:color/black"
                    android:textSize="17sp" />

            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/holo_orange_dark"
            android:gravity="center"
            android:text="@string/menu_type_jap"
            android:textColor="@color/colorAccent"
            android:textSize="20sp" />

        <!--listview 정의-->
        <ListView
            android:id="@+id/listview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textFilterEnabled="true" />

    </LinearLayout>

</LinearLayout>
